@@ -6,7 +6,7 @@
 \title{Detect clumps}
 
 \description{
-Detect clumps (patches) of connected cells. Each clump gets a unique ID. NA and zero are used as backaground values (i.e. these values are used to seperate clumps)
+Detect clumps (patches) of connected cells. Each clump gets a unique ID. NA and zero are used as background values (i.e. these values are used to seperate clumps). You can use queen's or king's case, using the \code{directions} argument. For larger files that are processed in chunks, the highest clump number is not necessarily equal to the number of clumps (unless you use argument \code{gaps=FALSE}).
 }
 
 \usage{
@@ -19,10 +19,13 @@ clump(x, ...)
 }
 
 \details{
-This function is quite slow. It is much quicker for files that can be loaded into memory, particularly when the igraph package is available.
+This function requires that the igraph package is available.
+
 
 The following additional arguments can be passed, to replace default values for this function
 \tabular{rll}{
+  \tab \code{directions}  \tab Default value is 8 (Queen's case), the only valid alternative is 4 (King's case) \cr
+  \tab \code{gaps}  \tab Default value is \code{TRUE}. If \code{TRUE}, there may be 'gaps' in the chunk numbers (e.g. you may have 1, 2, 3 and 5 but not 4. If it is \code{FALSE}, these numbers will be recoded from 1 to n (4 in this example) \cr
   \tab \code{filename}  \tab Output filename. Default = '' \cr
   \tab \code{format}  \tab Character. Output file type. See \code{\link[raster]{writeRaster}} \cr
   \tab \code{datatype}  \tab Character. Output data type; can be 'INT', 'FLT', or a complete datatype description, see \code{\link[raster]{dataType}} \cr
